view broadcast & content in admin, adjusment database, adjusment backend

--- a/src/index.css
+++ b/src/index.css
@@ -70,3 +70,10 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+/* icon */
+/* .custom-icon {
+  background-color: transparent !important;
+  color: inherit !important;
+  
+} */
